# data_inpi

./: .gitignore  DataINPI_App.spec  README.md  main.py  pyproject.toml  rapport_final_etablissements.xlsx  run.py
UI/: index.html  script.js
src/data_inpi/: __init__.py  api.py  config.py  data.py  json.py  routes.py  user.py
