[project]
name = "data-inpi"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "pillow (>=12.0.0,<13.0.0)"
]

[tool.poetry]
packages = [{include = "data_inpi", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

pyinstaller = {version = "^6.16.0", python = "<3.15"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
